# py-fmpapi

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: codecov.yml  python-package.yml
fmpapi/: __init__.py  fmp_get.py  fmp_set_api_key.py
tests/: __init__.py  test_fmp_get.py
