[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmpapi"
authors = [{name = "Christoph Scheuch", email = "christoph@tidy-intelligence.com"}]
version = "0.1.2"
description = "Flexible Client for the 'Financial Modeling Prep' API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.0.0"
]

[project.optional-dependencies]
pandas = [
  "pandas",
  "pyarrow"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
    "pytest-cov>=6.0.0"
]

[project.urls]
Repository = "https://github.com/tidy-finance/py-fmpapi"
Issues = "https://github.com/tidy-finance/py-fmpapi/issues"
Changelog = "https://github.com/tidy-finance/py-fmpapi/blob/master/CHANGELOG.md"
